src/styles/layout/_assignment_layout.sass
#assignment
  > .content
    // FIXME: Remove this important
    padding: 0 !important

    .title
      padding: ($gutter * 12) ($gutter * 8)

    .tables
      display: grid
      grid-row-gap: $gutter * 28

      .table-box
        display: grid
        max-height: 300px
        min-height: 300px
        overflow-x: auto
        overflow-y: visible

        .items-table
          border-collapse: collapse
          table-layout: fixed

          .header,
          .content
            .row
              height: 40px

              &.selected
                position: relative

              .cell
                box-sizing: border-box
                padding: 0 $gutter * 8
                position: relative
                white-space: nowrap

                p
                  overflow: hidden
                  text-overflow: ellipsis

                &.phase
                  max-width: 100px
                  min-width: 100px
                  text-align: left

                &.status
                  max-width: 85px
                  min-width: 85px

                &.start
                  max-width: 100px
                  min-width: 100px

                &.target
                  max-width: 100px
                  min-width: 100px

                &.hours
                  max-width: 50px
                  min-width: 85px

            &.header
              .cell
                p
                  overflow: visible

            &.content
              overflow: auto

              .cell
                overflow: hidden
                text-align: center

        .resources-table
          border-collapse: collapse
          table-layout: fixed

          .header
            .cell
              position: sticky
              top: 0
              z-index: 500

          .content
            .row
              height: 40px

              &.selected
                position: relative

              .cell
                box-sizing: border-box
                position: relative
                white-space: nowrap

                p
                  overflow: hidden
                  text-overflow: ellipsis

                &.assign
                  max-width: 40px
                  min-width: 40px

                  button
                    box-sizing: border-box
                    display: block
                    height: 20px
                    margin: 0 auto
                    width: 20px

                &.resource
                  max-width: 100px
                  min-width: 100px
                  text-align: left

                &.status
                  max-width: 85px
                  min-width: 85px

                &.start
                  max-width: 100px
                  min-width: 100px

                &.target
                  max-width: 100px
                  min-width: 100px

                &.hours
                  max-width: 50px
                  min-width: 85px

                &.load
                  max-width: 120px
                  min-width: 120px

                &.empty
                  max-width: 40px
                  min-width: 40px

            &.header
              .cell
                p
                  overflow: visible

            &.content
              overflow: auto

              .cell
                overflow: hidden
                text-align: center

    .actions
      display: grid
      grid-row-gap: $gutter * 28

      button
        justify-self: center

      .check-box
        padding-left: 8px

  > .empty-state
    align-content: center
    display: grid
    grid-row-gap: $gutter * 24
    justify-content: center

    .empty-state-icon
      justify-self: center
      width: 120px

    .empty-state-content
      .content-sub-title
        text-align: center

